made some changes to resposive

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
         <br><br>
         <hr>
         <!-- Button trigger modal -->
-        <button type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal" class="fa fa-whatsapp" style="font-size:48px;color:rgb(11, 232, 59)">
+        <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="fa fa-whatsapp"
+            style="font-size:48px;color:rgb(11, 232, 59)">
         </button>
 
         <!-- Modal -->
@@ -136,13 +137,13 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Viewing Your Shipment Details in Whatsapp</h5>
-                       
+
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <input type="text" placeholder="Enter shipment number"><button>submit</button>
                         <br>
-                        <p>( enter the proper Shipping  code /TBAONT500361196/)</p>
+                        <p>( enter the proper Shipping code /TBAONT500361196/)</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -174,8 +175,7 @@
                     <p class="text-center"><b>Diamond Pendant</b></p>
                     <hr>
                 </div>
-            </div>
-            <div class="row">
+
                 <div class="col-lg-4 col-md-6  col-sm-12   text-dark border border-white "
                     style="background-color:  #fefefc;" id="hoverset">
                     <img src="./image/vala.webp" class="img-fluid img-thumbnail" alt="">
@@ -197,8 +197,6 @@
                     <p class="text-center"><b>Navratna Ring</b></p>
                     <hr>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-4 col-md-6  col-sm-12   text-dark border border-white "
                     style="background-color:  #fefefc;" id="hoverset">
                     <img src="./image/3.webp" class="img-fluid img-thumbnail" alt="">
@@ -220,8 +218,6 @@
                     <p class="text-center"><b>Kolhapuri thushi Necklace</b></p>
                     <hr>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-4 col-md-6  col-sm-12   text-dark border border-white "
                     style="background-color:  #fefefc;" id="hoverset">
                     <img src="./image/6.webp" class="img-fluid img-thumbnail" alt="">
@@ -243,8 +239,6 @@
                     <p class="text-center"><b>Chettinad Necklace</b></p>
                     <hr>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-4 col-md-6  col-sm-12   text-dark border border-white "
                     style="background-color:  #fefefc;" id="hoverset">
                     <img src="./image/9.webp" class="img-fluid img-thumbnail" alt="">
@@ -266,8 +260,6 @@
                     <p class="text-center"><b>Coral Necklace</b></p>
                     <hr>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-4 col-md-6  col-sm-12   text-dark border border-white "
                     style="background-color:  #fefefc;" id="hoverset">
                     <img src="./image/12.webp" class="img-fluid img-thumbnail" alt="">
@@ -303,13 +295,13 @@
         <!-- collection images -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-4 col-md-6  col-sm-12" id="boxshadow">
+                <div class="col-lg-4 col-md-4  col-sm-12" id="boxshadow">
                     <img src="./image/garden.webp" class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-4 col-md-6  col-sm-12" id="boxshadow">
+                <div class="col-lg-4 col-md-4  col-sm-12" id="boxshadow">
                     <img src="./image/blossom.webp" class="img-fluid" alt="">
                 </div>
-                <div class="col-lg-4 col-md-6  col-sm-12" id="boxshadow">
+                <div class="col-lg-4 col-md-4  col-sm-12" id="boxshadow">
                     <img src="./image/senorcollection.webp" class="img-fluid" alt="">
                 </div>
             </div>
@@ -374,41 +366,42 @@
         <hr>
         <!-- folowus -->
         <div class="container-fluid">
-            <div class="row">
-                <div class="col col-lg-3 col-md-6  col-sm-12">
+            <div class="row" id="soman">
+                <div class="col col-lg-6 col-md-12   col-sm-6">
                     <img src="./image/tnx1.jpg" alt="" class="img-fluid">
 
                 </div>
-                <div class="col col-lg-2 col-md-6  col-sm-12">
+                <div class="col col-lg-3 col-md-6 col-sm-3">
                     <img src="./image/tnx2.jpg" alt="" class="img-fluid">
                     <img src="./image/tnx3.jpg" alt="" class="img-fluid">
 
                 </div>
-                <div class="col col-lg-2 col-md-6  col-sm-12">
+                <div class="col col-lg-3 col-md-6  col-sm-3 ">
                     <img src="./image/tnx4.jpg" alt="" class="img-fluid">
                     <img src="./image/tnx6.webp" alt="" class="img-fluid">
                 </div>
-                <div class="col col-lg-5" id="follow">
-                    <br>
-                    <br><br><br><br><br>
-                    <p class="text-center">Sign up to receive exclusive offers and news</p>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Enter email address"
-                            aria-label="Recipient's username" aria-describedby="basic-addon2">
-                        <span class="input-group-text" id="basic-addon2">Subscribe</span>
-                    </div>
-                    <br>
-                    <ul>
-                        <p class="text-center">follow us on
-                            <i class="fa-brands fa-twitter fa-1x"></i>
-                            <i class="fa-brands fa-instagram fa-1x"></i>
-                            <i class="fa-brands fa-facebook fa-1x"></i>
-                        </p>
-                    </ul>
-                </div>
+
             </div>
         </div>
         <br>
+        <div class="col col-lg-12 col-md-12 col-sm-6" id="follow">
+
+            <p class="text-center" id="bottom1">Sign up</p>
+            <div class="input-group " id="bottom2">
+                <input type="text" class="form-control" placeholder="Enter email address"
+                    aria-label="Recipient's username" aria-describedby="basic-addon3">
+                <span class="input-group-text" id="basic-addon2">Subscribe</span>
+            </div>
+            <br>
+            <ul>
+                <p class="text-center" id="bottom3">follow us on
+                    <i class="fa-brands fa-twitter fa-1x"></i>
+                    <i class="fa-brands fa-instagram fa-1x"></i>
+                    <i class="fa-brands fa-facebook fa-1x"></i>
+                </p>
+            </ul>
+        </div>
+
         <!-- footer -->
         <div class="container-fluid" id="footer">
             <div class="row">
